--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -293,6 +293,12 @@
                   <a href='#' data-action='reorder-entities' data-orderby='cat'><i class='fas {{ sortIcon("cat") }}'></i></a>
                 </div>
               </th>
+              <th class='category-item-table w-20'>
+                <div class='d-flex justify-content-between'>
+                  <span>{{ 'Status'|trans }}</span>
+                  <a href='#' data-action='reorder-entities' data-orderby='status'><i class='fas {{ sortIcon("status") }}'></i></a>
+                </div>
+              </th>
               <th class='tags-item-table w-20'>
                 {{ 'Tags'|trans }}
               </th>
