--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -8,7 +8,7 @@
 
 {% block body %}
 
-{% include 'create-new-item-modal.html' %}
+{% include 'show-view-edit.html' %}
 <h2>{{ 'Welcome %s'|trans|format(App.Users.userData.firstname) }}</h2>
 
 <hr>
