--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -209,15 +209,14 @@
 
 {# TAB 4 CATEGORIES #}
 <div data-tabcontent='4' hidden>
+  {# EXPERIMENTS CATEGORIES #}
   <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Experiments categories'|trans }}</h3>
   <div class='pl-3 mb-5' id='experiments_categoriesDiv'>
-    <div {{ App.Request.query.has('templateid') ? 'hidden' }}>
-      <div class='mb-2 d-flex justify-content-between'>
-        <p class='col-form-label'>{{ 'Create and modify the categories available to experiments.'|trans }}</p>
-        <!-- CREATE NEW BUTTON the div around the button is necessary or the button itself gets resized on small viewports -->
-        <div>
-          <button type='button' class='btn btn-primary' data-action='toggle-modal' data-target='createexperiments_categoriesModal'>{{ 'Create'|trans }}</button>
-        </div>
+    <div class='mb-2 d-flex justify-content-between'>
+      <p class='col-form-label'>{{ 'Create and modify the categories available to experiments.'|trans }}</p>
+      <!-- CREATE NEW BUTTON the div around the button is necessary or the button itself gets resized on small viewports -->
+      <div>
+        <button type='button' class='btn btn-primary' data-action='toggle-modal' data-target='createexperiments_categoriesModal'>{{ 'Create'|trans }}</button>
       </div>
     </div>
     <ul class='list-group sortable' data-axis='y' data-table='experiments_status'>
@@ -328,13 +327,11 @@
   {# EXPERIMENTS STATUS #}
   <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Experiments Status'|trans }}</h3>
   <div class='pl-3 mb-5' id='experiments_statusDiv'>
-    <div {{ App.Request.query.has('templateid') ? 'hidden' }}>
-      <div class='mb-2 d-flex justify-content-between'>
-        <p class='col-form-label'>{{ 'Create and modify the categories available to experiments.'|trans }}</p>
-        {# CREATE NEW BUTTON the div around the button is necessary or the button itself gets resized on small viewports #}
-        <div>
-          <button type='button' class='btn btn-primary' data-action='toggle-modal' data-target='createexperiments_statusModal'>{{ 'Create'|trans }}</button>
-        </div>
+    <div class='mb-2 d-flex justify-content-between'>
+      <p class='col-form-label'>{{ 'Create and modify the categories available to experiments.'|trans }}</p>
+      {# CREATE NEW BUTTON the div around the button is necessary or the button itself gets resized on small viewports #}
+      <div>
+        <button type='button' class='btn btn-primary' data-action='toggle-modal' data-target='createexperiments_statusModal'>{{ 'Create'|trans }}</button>
       </div>
     </div>
     <ul class='list-group sortable mb-5' data-axis='y' data-table='experiments_status'>
@@ -374,15 +371,14 @@
       {% endfor %}
     </ul>
 
+  {# RESOURCES STATUS #}
   <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Resources Status'|trans }}</h3>
   <div class='pl-3' id='items_statusDiv'>
-    <div {{ App.Request.query.has('templateid') ? 'hidden' }}>
-      <div class='mb-2 d-flex justify-content-between'>
-        <p class='col-form-label'>{{ 'Create and modify the categories available to experiments.'|trans }}</p>
-        <!-- CREATE NEW BUTTON the div around the button is necessary or the button itself gets resized on small viewports -->
-        <div>
-          <button type='button' class='btn btn-primary' data-action='toggle-modal' data-target='createitems_statusModal'>{{ 'Create'|trans }}</button>
-        </div>
+    <div class='mb-2 d-flex justify-content-between'>
+      <p class='col-form-label'>{{ 'Create and modify the categories available to experiments.'|trans }}</p>
+      <!-- CREATE NEW BUTTON the div around the button is necessary or the button itself gets resized on small viewports -->
+      <div>
+        <button type='button' class='btn btn-primary' data-action='toggle-modal' data-target='createitems_statusModal'>{{ 'Create'|trans }}</button>
       </div>
     </div>
     <ul class='list-group sortable' data-axis='y' data-table='items_status'>
