fix update expcat

--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -245,7 +245,7 @@
             </li>
 
             <li class='list-inline-item'>
-              <button data-id='{{ cat.id }}' class='btn btn-primary' data-teamid='{{ App.Users.userData.team }}' data-target='experiments' data-action='update-category'>{{ 'Save'|trans }}</button>
+              <button data-id='{{ cat.id }}' class='btn btn-primary' data-teamid='{{ App.Users.userData.team }}' data-target='expcat' data-action='update-status'>{{ 'Save'|trans }}</button>
             </li>
 
             <li class='list-inline-item'>
