fix search page and advanced query

--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -34,10 +34,10 @@
         <i class='fas fa-fw fa-table'></i>
       </div>
 
-      <div class='mr-2' data-action='toggle-items-layout'>
-      <button class='btn btn-secondary btn-sm' data-action='toggle-next' data-toggle-target='filtersDiv' aria-label='{{ 'Toggle filters'|trans }}'>
-        <i class='fas fa-filter fa-fw mr-1 color-white'></i>{{ 'Filters'|trans }}
-      </button>
+      <div class='mr-2'>
+        <div class='btn btn-secondary btn-sm' data-action='toggle-next' data-toggle-target='filtersDiv' aria-label='{{ 'Toggle filters'|trans }}'>
+          <i class='fas fa-filter fa-fw mr-1 color-white'></i>{{ 'Filters'|trans }}
+        </div>
       </div>
 
       {# ORDER (Sort) #}
@@ -64,7 +64,7 @@
     </div>
   </div>
 
-  <div hidden id='filtersDiv' data-save-hidden='filtersDiv'>
+  <div id='filtersDiv' hidden data-save-hidden='filtersDiv'>
     <div class='d-flex'>
       {# LEFT MENU: FILTER/ORDER/SORT/LIMIT #}
       <div class='{{ searchPage ? 'mt-2' }}'>
