--- a/src/templates/show-item-table.html
+++ b/src/templates/show-item-table.html
@@ -12,7 +12,9 @@
   <td class='title'>
     {# edit icon #}
     {% if not item.locked and (item.userid == App.Users.userData.userid or Entity.type == 'items' or App.Users.isAdmin) %}
-      <span class='p-2 rounded hl-hover-gray'><a href='{{ Entity.page }}.php?mode=edit&id={{ item.id }}'><i class='fas fa-pencil-alt clickable link-like'></i></a></span>
+      <a href='{{ Entity.page }}.php?mode=edit&id={{ item.id }}'>
+        <span class='p-2 rounded hl-hover-gray'><i class='fas fa-pencil-alt'></i></span>
+      </a>
     {% endif %}
     {# lock icon #}
     {% if item.locked %}
