--- a/src/templates/show-item-table.html
+++ b/src/templates/show-item-table.html
@@ -55,7 +55,7 @@
     {% if itemtagsArr|length > 0 %}
       <span class='d-flex flex-wrap'>
         {% for tag in itemtagsArr %}
-          <a class='tag margin-1px' href='{{ Entity.page }}.php?mode=show&tags%5B%5D={{ tag.tag|url_encode }}'>{{ tag.tag|raw }}</a>
+          <a class='tag margin-1px {{ tag.is_favorite ? 'favorite' }}' href='{{ Entity.page }}.php?mode=show&tags%5B%5D={{ tag.tag|url_encode }}'>{{ tag.tag|raw }}</a>
         {% endfor %}
       </span>
   {% endif %}
