--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -109,8 +109,8 @@
         <select name='cat' class='autosubmit mr-1 form-control selectpicker' data-show-subtext='true' data-live-search='true' aria-label='Filter category'>
           <option value=''>{{ 'Filter by type'|trans }}</option>
           {% for category in bookableItemsTypes %}
-            <option style='color:#{{ category.color }}' value='{{ category.category_id }}'{{ App.Request.query.get('cat') == category.category_id ? ' selected'}}>
-          {{ category.category|raw }}</option>
+            <option style='color:#{{ category.color }}' value='{{ category.id }}'{{ App.Request.query.get('cat') == category.id ? ' selected'}}>
+          {{ category.title|raw }}</option>
           {% endfor %}
         </select>
       </form>
@@ -124,7 +124,7 @@
           {% for item in itemsArr %}
             {# data-color is used to set the background during initial drag #}
             <option data-color='{{ item.color }}' style='color:#{{ item.color }}' value='{{ item.id }}'{{ App.Request.query.get('item') == item.id ? ' selected'}}>
-            {{ item.category|raw }} - {{ item.title|raw }}</option>
+            {{ item.category_title|raw }} - {{ item.title|raw }}</option>
           {% endfor %}
         </select>
       </form>
@@ -136,7 +136,7 @@
           <div class='input-group-prepend'>
             <button class='btn btn-secondary' data-action='remove-param-reload' data-target='item'>X</button>
           </div>
-          <a href='database.php?mode=view&id={{ bookableItemData.id }}'  class='list-group-item hl-hover-gray'><span style='--bg: #{{ bookableItemData.color }}' class='category-button rounded p-1 mr-2'>{{ bookableItemData.category }}</span>{{ bookableItemData.title|raw }}</a>
+          <a href='database.php?mode=view&id={{ bookableItemData.id }}'  class='list-group-item hl-hover-gray'><span style='--bg: #{{ bookableItemData.color }}' class='category-button rounded p-1 mr-2'>{{ bookableItemData.category_title }}</span>{{ bookableItemData.title|raw }}</a>
         </div>
       </div>
     {% endif %}
