--- a/src/templates/show-item-table.html
+++ b/src/templates/show-item-table.html
@@ -18,7 +18,11 @@
     {% endif %}
     {# lock icon #}
     {% if item.locked %}
-      <i class='fas fa-lock fa-sm' style='color:#29AEB9'></i>
+      <i class='fas fa-lock fa-fw' style='color:#29AEB9'></i>
+    {% endif %}
+    {# archived icon #}
+    {% if item.state == constant('Elabftw\\Enums\\State::Archived').value %}
+      <i class='fas fa-box-archive fa-fw'></i>
     {% endif %}
     {# toggle body #}
     <span class='p-2 rounded hl-hover-gray' data-type='{{ Entity.type }}' data-id='{{ item.id }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'><i class='fas fa-square-plus fa-fw link-like'></i></span>
