--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -721,6 +721,7 @@ button:disabled {
 .item-category {
     font-size: 80%;
     text-transform: uppercase;
+    color: $medium;
 }
 
 .item a p:hover {
