--- a/src/templates/show-item-table.html
+++ b/src/templates/show-item-table.html
@@ -45,12 +45,12 @@
     {% if item.timestamped %}
       <i class='far fa-calendar-check mr-1'></i>
     {% endif %}
-    <span data-action='add-query-filter' data-key='cat' data-value='{{ item.category }}' class='item-type category-button rounded p-1' style='--bg:#{{ item.category_color }}'>{{ item.category_title }}</span>
+    <span data-action='add-query-filter' data-key='cat' data-value='{{ item.category }}' class='category-button rounded p-1' style='--bg:#{{ item.category_color }}'>{{ item.category_title|raw }}</span>
   </td>
 
   {# STATUS #}
   <td class='item-next'>
-    <span data-action='add-query-filter' data-key='status' data-value='{{ item.status }}' class='item-type category-button rounded p-1' style='--bg:#{{ item.status_color }}'>{{ item.status_title }}</span>
+    <span data-action='add-query-filter' data-key='status' data-value='{{ item.status }}' class='category-button rounded p-1' style='--bg:#{{ item.status_color }}'>{{ item.status_title|raw }}</span>
   </td>
 
   {# TAGS #}
