fix catstat destroy

--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -249,7 +249,7 @@
             </li>
 
             <li class='list-inline-item'>
-              <button data-id='{{ cat.id }}' data-teamid='{{ App.Users.userData.team }}' data-target='experiments' data-action='destroy-category' class='btn btn-danger' >{{ 'Delete'|trans }}</button>
+              <button data-id='{{ cat.id }}' data-teamid='{{ App.Users.userData.team }}' data-target='experiments_categories' data-action='destroy-catstat' class='btn btn-danger' >{{ 'Delete'|trans }}</button>
             </li>
           </ul>
         </li>
@@ -365,7 +365,7 @@
             </li>
 
             <li class='list-inline-item'>
-              <button data-id='{{ status.id }}' data-teamid='{{ App.Users.userData.team }}' data-target='experiments_status' data-action='destroy-status' class='btn btn-danger' >{{ 'Delete'|trans }}</button>
+              <button data-id='{{ status.id }}' data-teamid='{{ App.Users.userData.team }}' data-target='experiments_status' data-action='destroy-catstat' class='btn btn-danger' >{{ 'Delete'|trans }}</button>
             </li>
           </ul>
         </li>
@@ -412,7 +412,7 @@
             </li>
 
             <li class='list-inline-item'>
-              <button data-id='{{ status.id }}' data-teamid='{{ App.Users.userData.team }}' data-target='items_status' data-action='destroy-status' class='btn btn-danger' >{{ 'Delete'|trans }}</button>
+              <button data-id='{{ status.id }}' data-teamid='{{ App.Users.userData.team }}' data-target='items_status' data-action='destroy-catstat' class='btn btn-danger' >{{ 'Delete'|trans }}</button>
             </li>
           </ul>
         </li>
