--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -25,11 +25,11 @@
               <code><span class='token operator'>!</span></code>,
               <code><span class='token punctuation'>(</span></code>,
               <code><span class='token punctuation'>)</span></code>,
-              <code><sapn class='token string'>'</span></code> and
-              <code><sapn class='token string'>"</span></code>.<br>
-              <em><code><sapn class='token string'>termA</span></code></em> or
-              <em><code><sapn class='token string'>termB</span></code></em> or
-              <em><code><sapn class='token string'>456</span></code></em>
+              <code><span class='token string'>'</span></code> and
+              <code><span class='token string'>"</span></code>.<br>
+              <em><code><span class='token string'>termA</span></code></em> or
+              <em><code><span class='token string'>termB</span></code></em> or
+              <em><code><span class='token string'>456</span></code></em>
           </dd>
           <dt>Quoted term</dt>
           <dd>A sequence of characters including space (<code>&blank;</code>)
@@ -210,6 +210,7 @@
       <input
         id='extendedArea'
         name='q'
+        type='text'
         class='form-control'
         placeholder="{{ 'Enter search query, e.g.: %s'|trans|format(getExtendedSearchExample()) }}"
         spellcheck='false'
@@ -277,12 +278,12 @@
       <option data-action='clear'>{{ 'Select author'|trans }}/{{ 'group'|trans }}</option>
       <optgroup label='{{ 'Users'|trans }}'>
         {% for user in usersArr %}
-          <option value='author:{{ user.fullname|raw }}' {{- Request.query.get('owner') == 'author:'~user.fullname|raw ? ' selected' }}>[{{ 'author'|trans }}] {{ user.fullname|raw }}</option>
+          <option value='author:{{ user.fullname|raw }}' {{- Request.query.get('owner') == 'author:' ~ user.fullname|raw ? ' selected' }}>[{{ 'author'|trans }}] {{ user.fullname|raw }}</option>
         {% endfor %}
       </optgroup>
       <optgroup label='{{ 'Groups'|trans }}'>
         {% for group in teamGroups %}
-          <option value='group:{{ group|raw }}' {{- Request.query.get('owner') == 'group:'~group|raw ? ' selected' }}>[{{ 'group'|trans }}] {{ group|raw }}</option>
+          <option value='group:{{ group|raw }}' {{- Request.query.get('owner') == 'group:' ~ group|raw ? ' selected' }}>[{{ 'group'|trans }}] {{ group|raw }}</option>
         {% endfor %}
       </optgroup>
     </select>
@@ -379,7 +380,7 @@
   <div class='col-md-3'>
     <label for='locked'>{{ 'Locked'|trans }}</label>
     <select id='locked' name='locked' class='form-control filterHelper' data-filter='locked'>
-      <option value='' data-action='clear'>{{ 'Select lock status'|trans}}</option>
+      <option value='' data-action='clear'>{{ 'Select lock status'|trans }}</option>
       <option value='yes' {{- Request.query.get('locked') == 'yes' ? ' selected' }}>{{ 'Yes'|trans|lower }}</option>
       <option value='no' {{- Request.query.get('locked') == 'no' ? ' selected' }}>{{ 'No'|trans|lower }}</option>
     </select>
@@ -390,7 +391,7 @@
   <div class='col-md-3'>
     <label for='timestamped'>{{ 'Timestamped'|trans }}</label>
     <select id='timestamped' name='timestamped' class='form-control filterHelper' data-filter='timestamped'>
-      <option value='' data-action='clear'>{{ 'Select timestamp status'|trans}}</option>
+      <option value='' data-action='clear'>{{ 'Select timestamp status'|trans }}</option>
       <option value='yes' {{- Request.query.get('timestamped') == 'yes' ? ' selected' }}>{{ 'Yes'|trans|lower }}</option>
       <option value='no' {{- Request.query.get('timestamped') == 'no' ? ' selected' }}>{{ 'No'|trans|lower }}</option>
     </select>
