--- a/src/templates/todolist-panel.html
+++ b/src/templates/todolist-panel.html
@@ -41,7 +41,7 @@
     </div>
 
     <!-- ITEMS STEPS -->
-    <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='py-2'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Items'|trans }}</h3>
+    <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='py-2'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Resources'|trans }}</h3>
     <div data-save-hidden='todoStepsItem'><!-- this div is here as a target of the toggle-next, because for some reason 'hidden' doesn't work on a flex container -->
       <!-- id is needed to fill it from Todolist.class.ts -->
       <div id='todoStepsItems' class='d-flex flex-column'></div>
